syntax = "proto3";

package blog;

service BlogService {
	rpc getBlog(GetBlogRequest) returns (GetBlogResponse) {}
	rpc getMultiBlog(GetMultiBlogRequest) returns (GetMultiBlogResponse) {}
	rpc createBlog(createBlogRequest) returns (createBlogResult) {}
	rpc deleteBlog(delBlogRequest) returns (delBlogResult) {}
}

message GetBlogRequest {
	int64 id = 1;
}

message GetBlogResponse {
	Blog blog = 1;
	string error = 404;
}

message GetMultiBlogRequest {
	enum Type {
		ALL = 0;
		RANGE = 1;
	}
	Type type = 1;
	int64 start = 2;
	int64 number = 3;
	repeated Filter filter = 4;
}

message GetMultiBlogResponse {
	repeated Blog blogs = 1;
	string error = 404;
}

message createBlogRequest {
	Blog blog =1;
}

message createBlogResult {
	string id=1;
	string error = 404;
}

message Blog {
	int64 ID = 1;
	string Title = 2;
	string Content = 3;
	string PublishDate = 4;
	string Author = 5;
	repeated string Tags = 6;
	string Category = 7;
}

message Filter {
	enum Type {
		TITLE = 0;
		AUTHOR = 1;
		DATE = 2;
		TAG = 3;
	}
	Type type = 1;
	string value = 2;
	string details = 3;
}

message delBlogRequest {
	int64 ID = 1;
}

message delBlogResult {
	bool ok = 1;
	string error = 2;
}